--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification" content="nkKosqWtJunyzKWIu6NqGXXQBn7AJmQ1X9uqIyHCjhA" />
     <title>!ดู! รอยรักรอยบาป EP.10 (ตอนล่าสุด) ดูสด ดูย้อนหลัง!</title>
     <meta name="title" content="!ดู! รอยรักรอยบาป EP.10 (ตอนล่าสุด) ดูสด ดูย้อนหลัง!" />
     <meta name="description" content="!ดู! รอยรักรอยบาป EP.10 (ตอนล่าสุด) ดูสด ดูย้อนหลัง! ออกอากาศ วันอังคารที่ 25 มิถุนายน 2567 รอยรักรอยบาป ดูซีรีส์ไทย HD ดูผ่านมือถือฟรี ไม่มีโฆษณา!" />
